created general fromat for header and footer, as well as sorted page file structure

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
       <div class="navbar">
         <div class="home-button">
-          <a href="#"><p>Hestia</p></a>
+          <a href="/index.html"><p>Hestia</p></a>
         </div>
 
         <div class="right-navbar">
           <a href="#">HOME</a>
           <a href="pages/blog.html">BLOG</a>
           <a href="pages/contact.html">CONTACT</a>
-          <a href="#stand-for">CONTACT</a>
+          <a href="#stand-for">MORE</a>
         </div>
       </div>
 
@@ -116,7 +116,7 @@
     <div class="footer">
       <div class="footer-left">
         <a href="pages/about.html">ABOUT</a>
-        <a href="pages/parent-page.html">PARENT PAGE</a>
+        <a href="pages/parent.html">PARENT PAGE</a>
       </div>
 
       <div class="footer-right">
