--- a/pages/category-pages/theme-admin.html
+++ b/pages/category-pages/theme-admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uncategorized</title>
+  <title>Theme Admin</title>
 </head>
 <body>
   <div class="page-content">
@@ -29,7 +29,7 @@
 
       <div class="hero-content">
         <div class="hero-title">
-          <h1>Uncategorized</h1>
+          <h1>Theme Admin</h1>
         </div>
       </div>
     </div>
