--- a/pages/blogs/thousand-words.html
+++ b/pages/blogs/thousand-words.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worth a thousand words</title>
+    <title>Worth A Thousand Words</title>
   </head>
   <body>
+    <div class="page-content">
+      <div class="hero">
+        <div class="wordpress-header">
+          <a href="https://login.wordpress.org/register?locale=en_US">Register</a>
+          <a href="https://login.wordpress.org/?redirect_to=https%3A%2F%2Fwordpress.org%2Fthemes%2Fhestia%2F&locale=en_US">Log In</a>
+        </div>
+  
+        <div class="navbar">
+          <div class="home-button">
+            <a href="/index.html"><p>Hestia</p></a>
+          </div>
+  
+          <div class="right-navbar">
+            <a href="/index.html">HOME</a>
+            <a href="/pages/blog.html">BLOG</a>
+            <a href="/pages/contact.html">CONTACT</a>
+            <a href="#stand-for">MORE</a>
+          </div>
+        </div>
+  
+        <div class="hero-content">
+          <div class="hero-title">
+            <h1>Worth A Thousand Words</h1>
+          </div>
+        </div>
+      </div>
+
+      <div class="main"></div>
+
+      <div class="footer">
+        <div class="footer-left">
+          <a href="/pages/about.html">ABOUT</a>
+          <a href="/pages/parent.html">PARENT PAGE</a>
+        </div>
+  
+        <div class="footer-right">
+          "Hestia | Developed by <a href="https://themeisle.com" target="_blank">Themisle</a>
+        </div>
+      </div>
+    </div>
+
+  </body>
+  </html>
+
+
+
+
+
+
+  <!-- <h1>Worth a thousand words</h1>
     <div class="nav-header">
      
       <div class="home_button">
@@ -77,7 +127,4 @@
           </div>
         </div>
       </div>
-    </div>
-
-  </body>
-  </html>
+    </div> -->
