--- a/pages/category-pages/one-grandchild-cat.html
+++ b/pages/category-pages/one-grandchild-cat.html
@@ -35,7 +35,27 @@
     </div>
 
     <div class="main">
-      
+      <div class="blog-container">
+        <div class="category-container">
+          <a href="/pages/category-pages/first-child-cat.html">
+            <h6>First Child Category</h6>
+          </a>
+        </div>
+
+        <div class="blog-title">
+          <a href="/pages/blogs/category-hierarchy.html">
+            <h1>Category Hierarchy</h1>
+          </a>
+        </div>
+
+        <div class="blog-description">
+          <p>This post has 4 categories, part of a hierarchy that is 3 deep. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce euismod commodo ante. Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem non urna molestie euismod. Fusce <a href="/pages/blogs/category-hierarchy.html">Read More...</a></p>
+        </div>
+
+        <div class="blog-about">
+          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+        </div>
+      </div>
     </div>
 
     <div class="footer">
