--- a/pages/category-pages/theme-admin.html
+++ b/pages/category-pages/theme-admin.html
@@ -35,157 +35,159 @@
     </div>
 
     <div class="main">
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
+      <div class="wrap-around">
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
+
+          <div class="blog-title">
+            <a href="/pages/blogs/thousand-words.html">
+              <h1>Worth A Thousand Words</h1>
+            </a>
+          </div>
+
+          <div class="blog-description">
+            <p>Boat.</p>
+          </div>
+
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 14 years ago
+          </div>
         </div>
 
-        <div class="blog-title">
-          <a href="/pages/blogs/thousand-words.html">
-            <h1>Worth A Thousand Words</h1>
-          </a>
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
+
+          <div class="blog-title">
+            <a href="/pages/blogs/elements.html">
+              <h1>Elements</h1>
+            </a>
+          </div>
+
+          <div class="blog-description">
+            <p>The purpose of this HTML is to help determine what default settings are with CSS and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a <a href="/pages/blogs/elements.html"> Read more...</a></p>
+          </div>
+
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 14 years ago
+          </div>
         </div>
 
-        <div class="blog-description">
-          <p>Boat.</p>
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
+
+          <div class="blog-title">
+            <a href="/pages/blogs/more-tags.html">
+              <h1>More Tags</h1>
+            </a>
+          </div>
+
+          <div class="blog-description">
+            <p>More of these posts need tags.</p>
+          </div>
+
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          </div>
+        </div>
+        
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
+
+          <div class="blog-title">
+            <a href="/pages/blogs/html.html">
+              <h1>HTML</h1>
+            </a>
+          </div>
+
+          <div class="blog-description">
+            <p>What HTML tags would you like to see? Let’s start with an unordered list: One Two Three Four And then move on to a more interesting ordered list: one, two buckle my shoe three, four knock at the door Five, <a href="/pages/blogs/html.html">Read More...</a></p>
+          </div>
+
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          </div>
         </div>
 
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 14 years ago
-        </div>
-      </div>
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
 
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
-        </div>
+          <div class="blog-title">
+            <a href="/pages/blogs/links.html">
+              <h1>Links</h1>
+            </a>
+          </div>
 
-        <div class="blog-title">
-          <a href="/pages/blogs/elements.html">
-            <h1>Elements</h1>
-          </a>
-        </div>
+          <div class="blog-description">
+            <p>A few well known WordPress links: WordPress.org, the Codex and the download page.</p>
+          </div>
 
-        <div class="blog-description">
-          <p>The purpose of this HTML is to help determine what default settings are with CSS and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a <a href="/pages/blogs/elements.html"> Read more...</a></p>
-        </div>
-
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 14 years ago
-        </div>
-      </div>
-
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          </div>
         </div>
 
-        <div class="blog-title">
-          <a href="/pages/blogs/more-tags.html">
-            <h1>More Tags</h1>
-          </a>
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/first-child-cat.html">
+              <h6>First Child Category</h6>
+            </a>
+          </div>
+
+          <div class="blog-title">
+            <a href="/pages/blogs/category-hierarchy.html">
+              <h1>Category Hierarchy</h1>
+            </a>
+          </div>
+
+          <div class="blog-description">
+            <p>This post has 4 categories, part of a hierarchy that is 3 deep. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce euismod commodo ante. Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem non urna molestie euismod. Fusce <a href="/pages/blogs/category-hierarchy.html">Read More...</a></p>
+          </div>
+
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          </div>
         </div>
 
-        <div class="blog-description">
-          <p>More of these posts need tags.</p>
-        </div>
+        <div class="blog-container">
+          <div class="category-container">
+            <a href="/pages/category-pages/uncategorized.html">
+              <h6>UNCATEGORIZED</h6>
+            </a>
+          </div>
 
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
-        </div>
-      </div>
-      
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
-        </div>
+          <div class="blog-title">
+            <a href="/pages/blogs/hello-world.html">
+              <h1>Hello world!</h1>
+            </a>
+          </div>
 
-        <div class="blog-title">
-          <a href="/pages/blogs/html.html">
-            <h1>HTML</h1>
-          </a>
-        </div>
+          <div class="blog-description">
+            <p>Welcome to WordPress. This is your first post. Edit or delete it, then start blogging!</p>
+          </div>
 
-        <div class="blog-description">
-          <p>What HTML tags would you like to see? Let’s start with an unordered list: One Two Three Four And then move on to a more interesting ordered list: one, two buckle my shoe three, four knock at the door Five, <a href="/pages/blogs/html.html">Read More...</a></p>
-        </div>
-
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
-        </div>
-      </div>
-
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
-        </div>
-
-        <div class="blog-title">
-          <a href="/pages/blogs/links.html">
-            <h1>Links</h1>
-          </a>
-        </div>
-
-        <div class="blog-description">
-          <p>A few well known WordPress links: WordPress.org, the Codex and the download page.</p>
-        </div>
-
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
-        </div>
-      </div>
-
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/first-child-cat.html">
-            <h6>First Child Category</h6>
-          </a>
-        </div>
-
-        <div class="blog-title">
-          <a href="/pages/blogs/category-hierarchy.html">
-            <h1>Category Hierarchy</h1>
-          </a>
-        </div>
-
-        <div class="blog-description">
-          <p>This post has 4 categories, part of a hierarchy that is 3 deep. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce euismod commodo ante. Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem non urna molestie euismod. Fusce <a href="/pages/blogs/category-hierarchy.html">Read More...</a></p>
-        </div>
-
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
-        </div>
-      </div>
-
-      <div class="blog-container">
-        <div class="category-container">
-          <a href="/pages/category-pages/uncategorized.html">
-            <h6>UNCATEGORIZED</h6>
-          </a>
-        </div>
-
-        <div class="blog-title">
-          <a href="/pages/blogs/hello-world.html">
-            <h1>Hello world!</h1>
-          </a>
-        </div>
-
-        <div class="blog-description">
-          <p>Welcome to WordPress. This is your first post. Edit or delete it, then start blogging!</p>
-        </div>
-
-        <div class="blog-about">
-          By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          <div class="blog-about">
+            By <a href="category-pages/theme-admin.html">Theme Admin</a>, 15 years ago
+          </div>
         </div>
       </div>
     </div>
