--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,8 @@
       </div>
   
       <div class="main">
-        <div class="content-container">
+
+        <div class="wrap-around">
           <p>This site is using the standard WordPress Theme Unit Test Data for content. The Theme Unit Test is a series of posts and pages that match up with a checklist on the WordPress codex. You can use the data and checklist together to test your theme. It is recommended that you test your theme with the Theme Unit Test before submitting your theme to the WordPress.org theme directory.</p>
           <h2>WordPress Theme Development Resources</h2>
           <ol>
