--- a/pages/blogs/thousand-words.html
+++ b/pages/blogs/thousand-words.html
@@ -34,7 +34,11 @@
         </div>
       </div>
 
-      <div class="main"></div>
+      <div class="main">
+        <div class="wrap-around">
+          
+        </div>
+      </div>
 
       <div class="footer">
         <div class="footer-left">
