finished up the html

--- a/pages/blogs/category-hierarchy.html
+++ b/pages/blogs/category-hierarchy.html
@@ -31,12 +31,47 @@
           <div class="hero-title">
             <h1>Category Hierarchy</h1>
           </div>
+
+          <div class="hero-info">
+            <h4>Published by <a href="/pages/category-pages/theme-admin.html">Theme Admin</a> on June 20, 2008</h4>
+          </div>
         </div>
       </div>
 
       <div class="main">
         <div class="wrap-around">
-          
+          <div class="intro">
+            <p>This post has 4 categories, part of a hierarchy that is 3 deep.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce euismod commodo ante. Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem non urna molestie euismod. Fusce consequat tortor eu urna. Pellentesque aliquam, pede eget tincidunt feugiat, nunc massa hendrerit magna, non ultricies neque lectus nec dui. In hac habitasse platea dictumst. Sed feugiat quam eget lectus. Fusce at pede. Morbi sagittis tristique tortor. Sed erat justo, blandit ac, dignissim in, pretium ut, urna.</p>
+          </div>
+
+          <div class="categories-and-media">
+            <div class="catagories">
+              <div class="category-wrapper">
+                Categories: <a href="/pages/category-pages/first-child-cat.html">FIRST CHILD CATEGORY</a>
+              </div>
+              
+              <div class="category-wrapper">
+                Categories: <a href="/pages/category-pages/one-grandchild-cat.html">ONE GRANDCHILD CATEGORY</a>
+              </div>
+  
+              <div class="category-wrapper">
+                Categories: <a href="/pages/category-pages/parent-cat.html">PARENT</a>
+              </div>
+  
+              <div class="category-wrapper">
+                Categories: <a href="/pages/category-pages/second-child-cat.html">SECOND CHILD CATEGORY</a>
+              </div>
+            </div>
+
+
+            <div class="media">
+              <a href="#">i facebook</a>
+              <a href="#">i twitter</a>
+              <a href="#">i email</a>
+            </div>
+            <hr>
+          </div>
         </div>
       </div>
 
