--- a/pages/blogs/hello-world.html
+++ b/pages/blogs/hello-world.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+
+    <link rel="stylesheet" href="/styles/main.css">
+    <script src="https://kit.fontawesome.com/40f4eba692.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="page-content">
