--- a/pages/blogs/thousand-words.html
+++ b/pages/blogs/thousand-words.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Worth A Thousand Words</title>
+
+    <link rel="stylesheet" href="">
+
   </head>
   <body>
     <div class="page-content">
