--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
+
+  <link rel="stylesheet" href="/styles/main.css">
+  <script src="https://kit.fontawesome.com/40f4eba692.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page-content">
@@ -54,21 +57,21 @@
 
         <div class="info-column">
           <div class="info-wrapper">
-            <h4>i Find us at the office</h4>
+            <h4><i class="fa-solid fa-map"></i></i> Find us at the office</h4>
             <p>Strada Povernei, nr 20</p>
             <p>Bucharest</p>
             <p>Romania</p>
           </div>
 
           <div class="info-wrapper">
-            <h4>i Give us a ring</h4>
+            <h4><i class="fa-solid fa-phone-flip"></i> Give us a ring</h4>
             <p>John Doe</p>
             <p>+40 712 345 678</p>
             <p>Mon – Fri, 8:00-22:00</p>
           </div>
 
           <div class="info-wrapper">
-            <h4>i Legal information</h4>
+            <h4><i class="fa-solid fa-briefcase"></i> Legal information</h4>
             <p>John Doe Co.</p>
             <p>Fiscal Code: 12345678</p>
           </div>
