--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
 
       <div class="footer-right">
-        "Hestia | Developed by <a href="https://themeisle.com" target="_blank">Themisle</a>
+        Hestia | Developed by <a href="https://themeisle.com" target="_blank">Themisle</a>
       </div>
     </div>
   </div>
