added more styling

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,7 +35,7 @@
 
     <div class="main">
       <div class="wrap-around">
-        <div class="wrap-around">
+        <div class="blog-wrap">
           <div class="blog-container">
             <div class="category-container">
               <a href="/pages/category-pages/uncategorized.html">
@@ -200,7 +200,7 @@
       </div>
 
       <div class="footer-right">
-        "Hestia | Developed by <a href="https://themeisle.com" target="_blank">Themisle</a>
+        Hestia | Developed by <a href="https://themeisle.com" target="_blank">Themisle</a>
       </div>
     </div>
   </div>
