--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
   
         <div class="hero-content">
           <div class="hero-title">
-            <h1>Parent Page</h1>
+            <h1>About</h1>
           </div>
         </div>
       </div>
